--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "idt.h": "c",
         "paging.h": "c",
         "ahci.h": "c",
-        "xhci.h": "c"
+        "xhci.h": "c",
+        "stdint.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
